--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.28",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
